Rework OpenAPI client integration (#5)
Switch to more recent OpenAPI generator and move generated code from myhome.gen to myhome._gen
